--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.7",
     "pg": "^6.0.3",
+    "request": "^2.74.0",
     "session-file-store": "^0.2.0"
   },
   "repository": {
