--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
+    "chai": "^3.5.0",
     "connect-redis": "^3.1.0",
     "cookie-parser": "~1.4.3",
     "ejs": "^2.4.2",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "ioredis": "^2.3.0",
+    "mocha": "^3.0.2",
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.7",
     "pg": "^6.0.3",
