--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "Fun little responsive app to help indecisive friend groups",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./test/index.js"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
