--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "type": "git",
     "url": "https://github.com/developerDemetri/BoredWithFriends"
   },
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "devDependencies": {
+    "supertest": "^2.0.0"
+  }
 }
