--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Fun little responsive app to help indecisive friend groups",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha ./test/index.js"
+    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
@@ -17,6 +17,7 @@
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "ioredis": "^2.3.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.7",
