--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BoredWithFriends",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "description": "Fun little responsive app to help indecisive friend groups",
   "scripts": {
@@ -24,6 +24,7 @@
     "pg": "^6.0.3",
     "request": "^2.74.0",
     "session-file-store": "^0.2.0",
+    "superagent": "^2.2.0",
     "validator": "^5.5.0"
   },
   "repository": {
