--- a/package.json
+++ b/package.json
@@ -5,34 +5,34 @@
   "description": "Fun little responsive app to help indecisive friend groups",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
+    "test": "./node_modules/istanbul/lib/cli.js cover -x **/secret_settings.js ./node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
-    "chai": "^3.5.0",
     "connect-redis": "^3.1.0",
     "cookie-parser": "~1.4.3",
     "ejs": "^2.4.2",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "ioredis": "^2.3.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.0.2",
     "morgan": "~1.7.0",
     "node-uuid": "^1.4.7",
     "pg": "^6.0.3",
     "request": "^2.74.0",
     "session-file-store": "^0.2.0",
-    "supertest": "^2.0.0",
     "validator": "^5.5.0"
+  },
+  "devDependencies": {
+    "supertest": "^2.0.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.0.2",
+    "sinon": "^1.17.5",
+    "chai": "^3.5.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/developerDemetri/BoredWithFriends"
   },
-  "license": "Apache 2.0",
-  "devDependencies": {
-    "supertest": "^2.0.0"
-  }
+  "license": "Apache 2.0"
 }
