--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "./node_modules/istanbul/lib/cli.js cover -x **/secret_settings.js ./node_modules/mocha/bin/_mocha"
   },
   "dependencies": {
-    "bcrypt": "^0.8.7",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.1",
     "connect-redis": "^3.1.0",
     "cookie-parser": "~1.4.3",
